# hasherrs

./: Cargo.toml  README.md
src/: main.rs
src/routes/: argon2.rs  mod.rs  scrypt.rs
